codex-rs/tui/src/snapshots/codex_tui__pager_overlay__tests__static_overlay_snapshot_basic.snap
---
source: tui/src/pager_overlay.rs
expression: term.backend()
---
"/ S T A T I C / / / / / / / / / / / / / "
"one                                     "
"two                                     "
"three                                   "
"~                                       "
"~                                       "
"───────────────────────────────── 100% ─"
" ↑/↓ 滚动   pgup/pgdn 翻页   home/end 跳" Hidden by multi-width symbols: [(6, " "), (8, " "), (23, " "), (25, " "), (39, " ")]
" q 退出                                 " Hidden by multi-width symbols: [(4, " "), (6, " ")]
"                                        "
