codex-rs/tui/src/snapshots/codex_tui__pager_overlay__tests__transcript_overlay_apply_patch_scroll_vt100.snap
---
source: tui/src/pager_overlay.rs
expression: snapshot
---
/ 会 话 记 录 / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / /
• 新 增  foo.txt (+2 -0)
    1 +hello
    2 +world

• 新 增  foo.txt (+2 -0)
    1 +hello
    2 +world
─────────────────────────────────────────────────────────────────────────── 0% ─
 ↑/↓ 滚 动    pgup/pgdn 翻 页    home/end 跳 转
 q 退 出    esc 编 辑 上 一 条
